[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/KingsGambit_tiles/player.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://art/KingsGambit_tiles/shield.png" type="Texture" id=3]
[ext_resource path="res://ShieldArea2d.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=3]
radius = 29.2838
height = 10.089

[sub_resource type="CircleShape2D" id=2]
radius = 60.0

[node name="Player" type="Area2D" groups=[
"Player",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="ShieldArea2D" type="Area2D" parent="." groups=[
"Player_Projectile",
]]
position = Vector2( 0, -30 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldArea2D"]
position = Vector2( -1.18921, 26.3518 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="ShieldArea2D"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="DurationTimer" type="Timer" parent="ShieldArea2D"]
one_shot = true

[node name="RechargeTimer" type="Timer" parent="ShieldArea2D"]
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="ShieldArea2D/DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="ShieldArea2D/RechargeTimer" to="ShieldArea2D" method="_on_RechargeTimer_timeout"]
[connection signal="timeout" from="ShieldArea2D/RechargeTimer" to="." method="_on_RechargeTimer_timeout"]
